# iterm2-scripts

./: .gitignore  .mise.toml  Brewfile  CHANGELOG.md  CLAUDE.md  README.md  RESUME.md  build.py  claude-orphan-cleanup.py  default-layout.py  install.sh  layout.example.toml  mise.toml  package-lock.json  package.json  pyproject.toml  setup.sh  split.py  uninstall.sh  version_check.py  workspace-launcher.py
.github/workflows/: release.yml
Formula/: iterm2-layout-manager.rb
completions/: _iterm2-layout  iterm2-layout.bash
docs/: CLAUDE.md  SMART_SELECTION_ROOT_RELATIVE_PATHS.md
docs/adr/: 2026-01-17-iterm2-path-augmentation.md  2026-01-17-iterm2-window-ordering.md  2026-01-17-shell-alias-resolution.md  2026-01-26-modular-source-concatenation.md
maintenance/: README.md  clear-all-badges.applescript  disable-profile-badges.sh  remove-all-emojis.sh
platypus/: README.md  TextHelix-Info.plist  TextHelix.platypus
src/: _header.py  config_loader.py  dialogs.py  discovery.py  layout_toggle.py  logging_setup.py  main.py  pane_setup.py  panes.py  preferences.py  result.py  scan_dirs.py  selector.py  setup_wizard.py  swiftdialog.py  tab_customization.py  tab_detection.py  tab_utils.py  tool_installer.py
